<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parcados</string>
    <string name="action_about">About</string>
    <string name="button_name1">Ingresar</string>
    <string name="text">sample text1</string>
    <string name="textview">TextView</string>
    <string name="ImplicitViewURL">ImplicitViewURL</string>
    <string name="testText">testTExt</string>
    <string name="otraAct">otraAct</string>
    <string name="otraACt">otraAct</string>
    <string name="logo">Logo Parcados</string>
    <string name="BParqueadero">Buscar Parqueadero</string>
    <string name="calcularPrecio">Calculadora de Costo</string>
    <string name="consultarCupos">Consultar vía SMS</string>
    <string name="zonas">Zonas</string>
    <string name="buscar_parqueaderos">Buscar Parqueaderos</string>
    <string name="parqueaderos">Parqueaderos</string>
    <string name="parqueadero_cupos">Cupos:</string>
    <string name="parqueadero_precio">Precio por minuto:</string>
    <string name="parqueadero_horario">Horario:</string>
    <string name="parqueadero_caracteristicas">Características:</string>
    <string name="parqueadero_direccion">Dirección:</string>
    <string name="precioActual">Precio Actual:</string>
    <string name="inciarTiempo">Iniciar</string>
    <string name="finalizarTiempo">Finalizar</string>
    <string name="ingresarHoraInicio">Ingresar hora de inicio</string>
    <string name="ingresarPrecio">Ingresar Precio</string>
    <string name="consultarPrecio">Consultar Precio</string>
    <string name="seleccionarParqueadero">Seleccionar Parqueadero</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Reservar">Reservar</string>
    <string name="AgregarAFavoritos">Agregar a Favoritos</string>
    <string name="comandosDeVoz">Comandos de Voz</string>
    <string name="habilitarAcc">Habilitar acelerometro</string>
    <string name="deshabilitarAcc">Deshabilitar acelerometro</string>
    <string name="ajustarAcc">Ajustar acelerometro </string>
    <string name="reiniciar_precio">Reiniciar información</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="busquedas_array">
        <item>Zonas</item>
        <item>Empresa</item>
        <item>Dirección</item>
        <item>Localización</item>
    </string-array>
    <string-array name="opciones_array">
        <item>Mis Reservas</item>
        <item>Buscar Parqueadero</item>
        <item>Calculadora de Costos</item>
        <item>Mapa</item>
        <item>Historial de Reservas</item>
        <item>Parqueaderos Favoritos</item>        
    </string-array>

</resources>